src/test/resources/test/coco/invalid/ModelWithGenerics2.struct
package test.coco.invalid;

struct ModelWithGenerics2 {
  Z f1;
  Q f2;
  foo.bar.Baz<SomeGeneric>[] f3;
}
